<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/algas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/algas"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/peixes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/peixes_picados"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/algas"
        android:autofillHints="" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/calcular"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peixes" />

    <TextView
        android:id="@+id/valorFinal"
        android:layout_width="359dp"
        android:layout_height="212dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcular"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:layout_width="250dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toTopOf="@+id/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peixes"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/molho_t1"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:text="@string/molho_t2"/>
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="200dp"
            android:layout_height="51dp"
            android:text="@string/molho_t3"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>